# tiger-bot

./: .gitignore  Cargo.toml  Dockerfile  Justfile  build.rs  clippy.toml
.cargo/: config.toml
db/: schema.sql
db/migrations/: 20250417034715_quotes.sql  20250515204051_opt_out.sql
db/queries/: quotes.sql  user_management.sql
generated_db_crate/: Cargo.toml
generated_db_crate/src/: lib.rs  queries.rs  types.rs
generated_db_crate/src/queries/: quotes.rs  user_management.rs
src/: callbacks.rs  config.rs  main.rs  utils.rs
src/commands/: mod.rs  quotes.rs
