[package]
name = "tiger_bot"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3 # change to s to reduce binary size with a performance tradeoff
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.14"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
teloxide = { version = "0.15.0", features = ["macros", "webhooks-axum", "rustls"] }
chrono = "0.4"
cached = { version = "0.55", features = ["async", "ahash", "async_tokio_rt_multi_thread"] }
db = { path = "./generated_db_crate", features = ["deadpool", "chrono"] }
rust_decimal = "1.37"

[build-dependencies]
clorinde = "0.14"
postgres = "0.19"
